ajustes nos codigos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Manual de Instruções (4), Página inicial (5).
 
 <!-- falta incrementar:
 cookie para ao entrar no site, aciona alert(prompt("aceitar termo de acesso")). 
-adicionar o menu automaticamente do arquivo menu.html em todas as paginas
+(não foi possivel) adicionar o menu automaticamente do arquivo menu.html em todas as paginas
 fazer documento pdf com manual de instrução
 dar um jeito de pesquisar por qualquer parte do nome do aluno
 (ok) decorar o css -->
@@ -30,7 +30,7 @@ dar um jeito de pesquisar por qualquer parte do nome do aluno
   <ul>
     <li><a href="index.html">Home</a></li>
     <li class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn">Pesquisar Aluno</a>
+      <a class="dropbtn">Pesquisar Aluno</a>
       <div class="dropdown-content">
         <a href="pesquisa-por-numero.html">Por número do aluno</a>
         <a href="pesquisa-por-nome.html">Por nome do aluno</a>
