--- a/pesquisa-por-nome.html
+++ b/pesquisa-por-nome.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa por nomeo</title>
+    <title>Pesquisa por nome</title>
 </head>
-<body on load="chamaMenu()">
+<body>
     <div id="menu"></div>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
     
     <h1>Pesquisar por nome do aluno</h1>
     <p>Pode ser usado o primero, último ou âmbos os nomes. Por favor, não use caracteres especiais.</p>
-    <form action="pesquisar-por-nome.php" method="get" id="dadosForm">
+    <form action="pesquisa-por-nome.php" method="get" id="dadosForm">
         <div>
             <label for="nome">Nome do aluno: </label>
             <input id="nome" type="text" name="nome" placeholder="Digite o nome do aluno">
