novas correcoes de css

--- a/novo-contacto.html
+++ b/novo-contacto.html
@@ -39,7 +39,7 @@
             <input type="number" name="numero" placeholder="Digite somente o número">
         </div>
         <br>
-        <button onclick="submeterFormulario('dadosForm')">Enviar</button>
+        <button onclick="submeterFormulario('dadosForm')">Adicionar</button>
     </form>
         <div id="resultado"></div>
 
